--- a/IST_250_1.ipynb
+++ b/IST_250_1.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "name": "IST_250_1.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyN8V2m7kgQ5A0Rt+n7SKeDp",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +12,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Konstantinopoli/IST250_1/blob/master/IST_250_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -48,17 +36,14 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "MwUlmK7vbVPb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "TDiHiEeiuo0i",
+        "colab_type": "text"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "![Great Wave off Kanagawa](https://github.com/Konstantinopoli/IST250_1/raw/master/1280px-Great_Wave_off_Kanagawa2.jpg)"
+      ]
     }
   ]
 }
